--- a/html/index.html
+++ b/html/index.html
@@ -35,14 +35,14 @@
                 <div class="cwrapper cviewport">
                     <img src="../img/2/p2.jpg" class="background">
                     <img src="../img/logo2.png" class="logo" alt="">
-                    <img src="../img/2/pp2_02.png" alt="1" class="float hidden animated rotateInUpLeft" style="top:2.1rem;">
-                    <img src="../img/2/pp2_03.png" alt="1" class="float hidden animated rotateInUpRight" style="top:2.76rem;">
-                    <img src="../img/2/pp2_04.png" alt="1" class="float hidden animated rotateInUpLeft" style="top:3.44rem;">
-                    <img src="../img/2/pp2_05.png" alt="1" class="float hidden animated rotateInUpRight" style="top:4.41rem;">
-                    <img src="../img/2/pp2_06.png" alt="1" class="float hidden animated rotateInUpLeft" style="top:5.14rem;">
-                    <img src="../img/2/pp2_07.png" alt="1" class="float hidden animated rotateInUpRight" style="top:5.86rem;">
-                    <img src="../img/2/pp2_08.png" alt="1" class="float hidden animated rotateInUpLeft" style="top:6.45rem;">
-                    <img src="../img/2/pp2_09.png" alt="1" class="float hidden animated rotateInUpRight" style="top:7.11rem;">
+                    <img src="../img/2/pp2_02.png" alt="1" class="float hidden animated  lightSpeedIn" style="top:2.1rem;">
+                    <img src="../img/2/pp2_03.png" alt="1" class="float hidden animated  lightSpeedInLeft" style="top:2.76rem;">
+                    <img src="../img/2/pp2_04.png" alt="1" class="float hidden animated  lightSpeedIn" style="top:3.44rem;">
+                    <img src="../img/2/pp2_05.png" alt="1" class="float hidden animated  lightSpeedInLeft" style="top:4.41rem;">
+                    <img src="../img/2/pp2_06.png" alt="1" class="float hidden animated  lightSpeedIn" style="top:5.14rem;">
+                    <img src="../img/2/pp2_07.png" alt="1" class="float hidden animated  lightSpeedInLeft" style="top:5.86rem;">
+                    <img src="../img/2/pp2_08.png" alt="1" class="float hidden animated  lightSpeedIn" style="top:6.45rem;">
+                    <img src="../img/2/pp2_09.png" alt="1" class="float hidden animated  lightSpeedInLeft" style="top:7.11rem;">
                     <img src="../img/footer.png" alt="1" class="footer">
                 </div>
             </div>
@@ -60,9 +60,9 @@
                     <img src="../img/4/pp4_02.jpg" class="background">
                     <img src="../img/logo2.png" class="logo" alt="">
                     <img src="../img/4/pp4up_02.png" alt="1" class="float" style="top:3.4rem;">
-                    <img src="../img/4/pp4_02.png" alt="1" class="float" style="top:3.4rem;">
+                    <img src="../img/4/pp4_02.png" alt="1" class="float hidden animated middle upper" style="top:3.4rem;">
                     <img src="../img/4/pp4d_02.png" alt="1" class="float" style="top:7.25rem;">
-                    <img src="../img/4/pp4dfull_02.png" alt="1" class="float" style="top:7.25rem;">
+                    <img src="../img/4/pp4dfull_02.png" alt="1" class="float   hidden animated middle upper delay" style="top:7.25rem;">
                     <img src="../img/footer2.png" alt="1" class="footer">
                 </div>
             </div>
@@ -70,14 +70,209 @@
                 <div class="cwrapper cviewport">
                     <img src="../img/5/pp5_02.jpg" class="background">
                     <img src="../img/logo2.png" class="logo" alt="">
-                    <img src="../img/5/pp5f_02.png" alt="1" class="float" style="top:2.18rem;">
-                    <img src="../img/5/pp5f_03.png" alt="1" class="float" style="top:2.77rem;">
-                    <img src="../img/5/pp5f_04.png" alt="1" class="float" style="top:3.54rem;">
-                    <img src="../img/5/pp5f_05.png" alt="1" class="float" style="top:4.4rem;">
-                    <img src="../img/5/pp5f_06.png" alt="1" class="float" style="top:5.19rem;">
-                    <img src="../img/5/pp5f_07.png" alt="1" class="float" style="top:5.81rem;">
-                    <img src="../img/5/pp5f_08.png" alt="1" class="float" style="top:6.53rem;">
-                    <img src="../img/5/pp5f_09.png" alt="1" class="float" style="top:7.22rem;">
+                    <img src="../img/5/pp5f_02.png" alt="1" class="float hidden animated  lightSpeedIn delay600" style="top:2.18rem;">
+                    <img src="../img/5/pp5f_03.png" alt="1" class="float hidden animated  lightSpeedInLeft delay600" style="top:2.77rem;">
+                    <img src="../img/5/pp5f_04.png" alt="1" class="float hidden animated  lightSpeedIn delay900" style="top:3.54rem;">
+                    <img src="../img/5/pp5f_05.png" alt="1" class="float hidden animated  lightSpeedInLeft delay900" style="top:4.4rem;">
+                    <img src="../img/5/pp5f_06.png" alt="1" class="float hidden animated  lightSpeedIn delay1200" style="top:5.19rem;">
+                    <img src="../img/5/pp5f_07.png" alt="1" class="float hidden animated  lightSpeedInLeft delay1200" style="top:5.81rem;">
+                    <img src="../img/5/pp5f_08.png" alt="1" class="float hidden animated  lightSpeedIn delay1500" style="top:6.53rem;">
+                    <img src="../img/5/pp5f_09.png" alt="1" class="float hidden animated  lightSpeedInLeft delay1500" style="top:7.22rem;">
+                    <img src="../img/footer.png" alt="1" class="footer">
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="cwrapper cviewport">
+                    <img src="../img/6/p6_02.jpg" class="background">
+                    <img src="../img/logo2.png" class="logo" alt="">
+                    <img src="../img/6/pp6_02.png" alt="1" class="float hidden animated  upper" style="top:3.64rem;">
+                    <img src="../img/6/pp6up_02.png" alt="1" class="float hidden animated  upper delay600" style="top:6.72rem;">
+                    <img src="../img/footer.png" alt="1" class="footer">
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="cwrapper cviewport">
+                    <img src="../img/8/pp8_02.jpg" class="background">
+                    <img src="../img/logo2.png" class="logo" alt="">
+                    <img src="../img/8/pp8_02.png" alt="1" class="float hidden animated  righter" style="top:3.5rem;left:1.42rem;width:4.98rem;">
+                    <img src="../img/footer.png" alt="1" class="footer">
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="cwrapper cviewport">
+                    <img src="../img/7/pp7_02.jpg" class="background">
+                    <img src="../img/logo2.png" class="logo" alt="">
+                    <img src="../img/7/pp7_02.png" alt="1" class="float hidden animated  downer" style="top:6.34rem;">
+                    <img src="../img/footer.png" alt="1" class="footer">
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="cwrapper cviewport">
+                    <img src="../img/9/pp9_02.jpg" class="background">
+                    <img src="../img/logo2.png" class="logo" alt="">
+                    <img src="../img/footer.png" alt="1" class="footer">
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="cwrapper cviewport">
+                    <img src="../img/9/pp9_02.jpg" class="background">
+                    <img src="../img/logo2.png" class="logo" alt="">
+                    <img src="../img/footer.png" alt="1" class="footer">
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="cwrapper cviewport">
+                    <img src="../img/11/pp11_02.jpg" class="background">
+                    <img src="../img/logo2.png" class="logo" alt="">
+                    <img src="../img/11/p11_02.png" alt="1" class="float hidden animated  lightSpeedIn delay600" style="top:2.18rem;">
+                    <img src="../img/11/p11_03.png" alt="1" class="float hidden animated  lightSpeedInLeft delay600" style="top:2.75rem;">
+                    <img src="../img/11/p11_04.png" alt="1" class="float hidden animated  lightSpeedIn delay900" style="top:3.52rem;">
+                    <img src="../img/11/p11_05.png" alt="1" class="float hidden animated  lightSpeedInLeft delay900" style="top:4.11rem;">
+                    <img src="../img/11/p11_06.png" alt="1" class="float hidden animated  lightSpeedIn delay1200" style="top:4.74rem;">
+                    <img src="../img/11/p11_07.png" alt="1" class="float hidden animated  lightSpeedInLeft delay1200" style="top:5.45rem;">
+                    <img src="../img/11/p11_08.png" alt="1" class="float hidden animated  lightSpeedIn delay1500" style="top:6.07rem;">
+                    <img src="../img/11/p11_09.png" alt="1" class="float hidden animated  lightSpeedInLeft delay1500" style="top:6.72rem;">
+                    <img src="../img/11/p11_10.png" alt="1" class="float hidden animated  lightSpeedInLeft delay1500" style="top:7.38rem;">
+                    <img src="../img/footer.png" alt="1" class="footer">
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="cwrapper cviewport">
+                    <img src="../img/12/p12_02.jpg" class="background">
+                    <img src="../img/logo2.png" class="logo" alt="">
+                    <img src="../img/12/p12_03.png" class="float hidden animated  righter" style="left:1.87rem;width:4.53rem;top:3.69rem;">
+                    <img src="../img/footer.png" alt="1" class="footer">
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="cwrapper cviewport">
+                    <img src="../img/13/p13.jpg" class="background">
+                    <img src="../img/logo2.png" class="logo" alt="">
+                    <img src="../img/13/p13_02.png" class="float hidden animated  upper" style="top:6.75rem;">
+                    <img src="../img/footer.png" alt="1" class="footer">
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="cwrapper cviewport">
+                    <img src="../img/13/p13.jpg" class="background">
+                    <img src="../img/logo2.png" class="logo" alt="">
+                    <img src="../img/13/p13_02.png" class="float hidden animated  upper" style="top:6.75rem;">
+                    <img src="../img/footer.png" alt="1" class="footer">
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="cwrapper cviewport">
+                    <img src="../img/14/p14_02.jpg" class="background">
+                    <img src="../img/logo2.png" class="logo" alt="">
+                    <img src="../img/footer.png" alt="1" class="footer">
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="cwrapper cviewport">
+                    <img src="../img/15/p15_02.jpg" class="background">
+                    <img src="../img/logo2.png" class="logo" alt="">
+                    <img src="../img/footer.png" alt="1" class="footer">
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="cwrapper cviewport">
+                    <img src="../img/16/p16_02.jpg" class="background">
+                    <img src="../img/logo2.png" class="logo" alt="">
+                    <img src="../img/16/p16_03.png" class="float hidden animated  righter" style="left:1.05rem;width:5.35rem;top:3.55rem;">
+                    <img src="../img/footer.png" alt="1" class="footer">
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="cwrapper cviewport">
+                    <img src="../img/17/p17_02.jpg" class="background">
+                    <img src="../img/logo2.png" class="logo" alt="">
+                    <img src="../img/17/p17_03.png" class="float hidden animated  righter" style="left:1.05rem;width:5.35rem;top:3.67rem;">
+                    <img src="../img/footer.png" alt="1" class="footer">
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="cwrapper cviewport">
+                    <img src="../img/18/p18_02.jpg" class="background">
+                    <img src="../img/logo2.png" class="logo" alt="">
+                    <img src="../img/18/p18_03.png" class="float hidden heart" style="left:2.51rem;width:1.37rem;top:4.71rem;">
+                    <img src="../img/footer.png" alt="1" class="footer">
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="cwrapper cviewport">
+                    <img src="../img/19/p19_02.jpg" class="background">
+                    <img src="../img/logo2.png" class="logo" alt="">
+                    <img src="../img/19/p19_02.png" alt="1" class="float hidden animated  lightSpeedIn delay600" style="top:2.21rem;">
+                    <img src="../img/19/p19_03.png" alt="1" class="float hidden animated  lightSpeedInLeft delay600" style="top:2.84rem;">
+                    <img src="../img/19/p19_04.png" alt="1" class="float hidden animated  lightSpeedIn delay900" style="top:3.40rem;">
+                    <img src="../img/19/p19_05.png" alt="1" class="float hidden animated  lightSpeedInLeft delay900" style="top:4.18rem;">
+                    <img src="../img/19/p19_06.png" alt="1" class="float hidden animated  lightSpeedIn delay1200" style="top:4.67rem;">
+                    <img src="../img/19/p19_07.png" alt="1" class="float hidden animated  lightSpeedInLeft delay1200" style="top:5.43rem;">
+                    <img src="../img/19/p19_08.png" alt="1" class="float hidden animated  lightSpeedIn delay1500" style="top:6.20rem;">
+                    <img src="../img/19/p19_09.png" alt="1" class="float hidden animated  lightSpeedInLeft delay1500" style="top:6.78rem;">
+                    <img src="../img/19/p19_10.png" alt="1" class="float hidden animated  lightSpeedInLeft delay1500" style="top:7.43rem;">
+                    <img src="../img/footer.png" alt="1" class="footer">
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="cwrapper cviewport">
+                    <img src="../img/20/p20_02.jpg" class="background">
+                    <img src="../img/logo2.png" class="logo" alt="">
+                    <img src="../img/20/p20_03.png" class="float hidden heart" style="left:2.51rem;width:1.37rem;top:4.71rem;">
+                    <img src="../img/footer.png" alt="1" class="footer">
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="cwrapper cviewport">
+                    <img src="../img/21/p21_02.jpg" class="background">
+                    <img src="../img/logo2.png" class="logo" alt="">
+                    <img src="../img/20/p20_03.png" class="float hidden heart" style="left:2.51rem;width:1.37rem;top:4.71rem;">
+                    <img src="../img/footer.png" alt="1" class="footer">
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="cwrapper cviewport">
+                    <img src="../img/22/p22_02.jpg" class="background">
+                    <img src="../img/logo2.png" class="logo" alt="">
+                    <img src="../img/22/p22_03.png" class="float hidden heart" style="left:2.51rem;width:1.37rem;top:5.06rem;">
+                    <img src="../img/footer.png" alt="1" class="footer">
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="cwrapper cviewport">
+                    <img src="../img/23/p23_02.jpg" class="background">
+                    <img src="../img/logo2.png" class="logo" alt="">
+                    <img src="../img/footer.png" alt="1" class="footer">
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="cwrapper cviewport">
+                    <img src="../img/23/p23_02.jpg" class="background">
+                    <img src="../img/logo2.png" class="logo" alt="">
+                    <img src="../img/footer.png" alt="1" class="footer">
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="cwrapper cviewport">
+                    <img src="../img/24/p24_02.jpg" class="background">
+                    <img src="../img/logo2.png" class="logo" alt="">
+                    <img src="../img/24/p24_03.png" class="float hidden bigger" style="left:2.32rem;width:1.81rem;top:4.56rem;">
+                    <img src="../img/footer.png" alt="1" class="footer">
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="cwrapper cviewport">
+                    <img src="../img/25/p25_02.jpg" class="background">
+                    <img src="../img/logo2.png" class="logo" alt="">
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="cwrapper cviewport">
+                    <img src="../img/26/p26_02.jpg" class="background">
+                    <img src="../img/logo2.png" class="logo" alt="">
+                    <img src="../img/26/p26_03.png" class="float hidden bigger" style="left:0.27rem;width:1.19rem;top:3.43rem;">
+                    <img src="../img/26/p26_05.png" class="float hidden bigger" style="left:2.76rem;width:0.91rem;top:3.43rem;">
+                    <img src="../img/26/p26_07.png" class="float hidden bigger" style="left:4.38rem;width:1.74rem;top:3.43rem;">
                     <img src="../img/footer.png" alt="1" class="footer">
                 </div>
             </div>
