--- a/html/index.html
+++ b/html/index.html
@@ -32,31 +32,31 @@
                 </div>
             </div>
             <div class="swiper-slide">
-                <div class="cwrapper cviewport">
+                <div class="cwrapper cviewport slide2">
                     <img src="../img/2/p2.jpg" class="background">
                     <img src="../img/logo2.png" class="logo" alt="">
-                    <img src="../img/2/pp2_02.png" alt="1" class="float hidden animated  lightSpeedIn" style="top:2.1rem;">
-                    <img src="../img/2/pp2_03.png" alt="1" class="float hidden animated  lightSpeedInLeft" style="top:2.76rem;">
-                    <img src="../img/2/pp2_04.png" alt="1" class="float hidden animated  lightSpeedIn" style="top:3.44rem;">
-                    <img src="../img/2/pp2_05.png" alt="1" class="float hidden animated  lightSpeedInLeft" style="top:4.41rem;">
-                    <img src="../img/2/pp2_06.png" alt="1" class="float hidden animated  lightSpeedIn" style="top:5.14rem;">
-                    <img src="../img/2/pp2_07.png" alt="1" class="float hidden animated  lightSpeedInLeft" style="top:5.86rem;">
-                    <img src="../img/2/pp2_08.png" alt="1" class="float hidden animated  lightSpeedIn" style="top:6.45rem;">
-                    <img src="../img/2/pp2_09.png" alt="1" class="float hidden animated  lightSpeedInLeft" style="top:7.11rem;">
+                    <img src="../img/2/pp2_02.png" alt="1" class="float hidden animated  lightSpeedIn delay600" style="top:2.1rem;">
+                    <img src="../img/2/pp2_03.png" alt="1" class="float hidden animated  lightSpeedInLeft delay600" style="top:2.76rem;">
+                    <img src="../img/2/pp2_04.png" alt="1" class="float hidden animated  lightSpeedIn delay900" style="top:3.44rem;">
+                    <img src="../img/2/pp2_05.png" alt="1" class="float hidden animated  lightSpeedInLeft delay900" style="top:4.41rem;">
+                    <img src="../img/2/pp2_06.png" alt="1" class="float hidden animated  lightSpeedIn delay1200" style="top:5.14rem;">
+                    <img src="../img/2/pp2_07.png" alt="1" class="float hidden animated  lightSpeedInLeft delay1200" style="top:5.86rem;">
+                    <img src="../img/2/pp2_08.png" alt="1" class="float hidden animated  lightSpeedIn delay1200" style="top:6.45rem;">
+                    <img src="../img/2/pp2_09.png" alt="1" class="float hidden animated  lightSpeedInLeft delay1500" style="top:7.11rem;">
                     <img src="../img/footer.png" alt="1" class="footer">
                 </div>
             </div>
             <div class="swiper-slide">
-                <div class="cwrapper cviewport">
+                <div class="cwrapper cviewport slide3">
                     <img src="../img/3/p3.jpg" class="background">
                     <img src="../img/logo2.png" class="logo" alt="">
-                    <img src="../img/3/pp3down_02.png" alt="1" class="float" style="top:4.32rem;">
-                    <img src="../img/3/pp3_02.png" alt="1" class="float hidden animated middle upper" style="top:4.32rem;">
-                    <img src="../img/footer.png" alt="1" class="footer">
+                    <img src="../img/3/pp3_02.png" alt="1" class="float" style="top:4.32rem;">
+                    <img src="../img/3/pp3down_02.png" alt="1" class="float hidden animated middle upper" style="top:4.32rem;">
+                    <img src="../img/footer2.png" alt="1" class="footer">
                 </div>
             </div>
             <div class="swiper-slide">
-                <div class="cwrapper cviewport">
+                <div class="cwrapper cviewport slide4">
                     <img src="../img/4/pp4_02.jpg" class="background">
                     <img src="../img/logo2.png" class="logo" alt="">
                     <img src="../img/4/pp4up_02.png" alt="1" class="float" style="top:3.4rem;">
@@ -110,13 +110,41 @@
                 <div class="cwrapper cviewport">
                     <img src="../img/9/pp9_02.jpg" class="background">
                     <img src="../img/logo2.png" class="logo" alt="">
+                    <div class="float" style="top:2.43rem;overflow-x:scroll;">
+                        <img src="../img/9/x.png" alt="1" style="top:2.43rem;width:1280px;">
+                    </div>
                     <img src="../img/footer.png" alt="1" class="footer">
                 </div>
             </div>
             <div class="swiper-slide">
                 <div class="cwrapper cviewport">
-                    <img src="../img/9/pp9_02.jpg" class="background">
+                    <img src="../img/r/p9x_02.jpg" class="background">
                     <img src="../img/logo2.png" class="logo" alt="">
+                    <img src="../img/r/p90.png" class="float hidden fadein delay1500" alt="" style="top:3.49rem">
+                    <img src="../img/r/p91.png" class="float hidden fadein delay1800" alt="" style="top:3.49rem">
+                    <img src="../img/r/p92.png" class="float hidden fadein delay2100" alt="" style="top:3.49rem">
+                    <img src="../img/r/p93.png" class="float hidden fadein delay2400" alt="" style="top:3.49rem">
+                    <img src="../img/r/p94.png" class="float hidden fadein delay2700" alt="" style="top:3.49rem">
+                    <img src="../img/r/p95.png" class="float hidden fadein delay3000" alt="" style="top:3.49rem">
+                    <img src="../img/r/p96.png" class="float hidden fadein delay3300" alt="" style="top:3.49rem">
+                    <img src="../img/r/p98.png" class="float hidden fadein delay3600" alt="" style="top:3.49rem">
+                    <img src="../img/r/p9-10_03.png" class="float hidden animated zoomInUp" alt="" style="top:5.59rem;left:2.6rem;width:1.25rem;">
+                    <img src="../img/footer.png" alt="1" class="footer">
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="cwrapper cviewport">
+                    <img src="../img/r/p9x_02.jpg" class="background">
+                    <img src="../img/logo2.png" class="logo" alt="">
+                    <img src="../img/rr/p9-2.png" class="float hidden fadein delay1500" alt="" style="top:3.49rem">
+                    <img src="../img/rr/p9-21.png" class="float hidden fadein delay1800" alt="" style="top:3.49rem">
+                    <img src="../img/rr/p9-22.png" class="float hidden fadein delay2100" alt="" style="top:3.49rem">
+                    <img src="../img/rr/p9-23.png" class="float hidden fadein delay2400" alt="" style="top:3.49rem">
+                    <img src="../img/rr/p9-24.png" class="float hidden fadein delay2700" alt="" style="top:3.49rem">
+                    <img src="../img/rr/p9-25.png" class="float hidden fadein delay3000" alt="" style="top:3.49rem">
+                    <img src="../img/rr/p9-26.png" class="float hidden fadein delay3300" alt="" style="top:3.49rem">
+                    <img src="../img/rr/p9-27.png" class="float hidden fadein delay3600" alt="" style="top:3.49rem">
+                    <img src="../img/rr/rr1_03.png" class="float hidden animated zoomInUp" alt="" style="top:5.27rem;left:2.83rem;width:0.74rem;">
                     <img src="../img/footer.png" alt="1" class="footer">
                 </div>
             </div>
@@ -148,15 +176,8 @@
                 <div class="cwrapper cviewport">
                     <img src="../img/13/p13.jpg" class="background">
                     <img src="../img/logo2.png" class="logo" alt="">
-                    <img src="../img/13/p13_02.png" class="float hidden animated  upper" style="top:6.75rem;">
-                    <img src="../img/footer.png" alt="1" class="footer">
-                </div>
-            </div>
-            <div class="swiper-slide">
-                <div class="cwrapper cviewport">
-                    <img src="../img/13/p13.jpg" class="background">
-                    <img src="../img/logo2.png" class="logo" alt="">
-                    <img src="../img/13/p13_02.png" class="float hidden animated  upper" style="top:6.75rem;">
+                    <img src="../img/13/p13_02.png" class="float hidden animated  upper" style="top:3.95rem;">
+                    <img src="../img/13/p14_02.png" class="float hidden animated  upper" style="top:6.75rem;">
                     <img src="../img/footer.png" alt="1" class="footer">
                 </div>
             </div>
@@ -164,6 +185,7 @@
                 <div class="cwrapper cviewport">
                     <img src="../img/14/p14_02.jpg" class="background">
                     <img src="../img/logo2.png" class="logo" alt="">
+                    <img src="../img/14/pl_02.png" alt="1" class="float hidden animated  rubberBand" style="top:3.97rem;">
                     <img src="../img/footer.png" alt="1" class="footer">
                 </div>
             </div>
@@ -171,6 +193,7 @@
                 <div class="cwrapper cviewport">
                     <img src="../img/15/p15_02.jpg" class="background">
                     <img src="../img/logo2.png" class="logo" alt="">
+                    <img src="../img/15/pux_02.png" alt="1" class="float hidden animated  jello" style="top:3.97rem;">
                     <img src="../img/footer.png" alt="1" class="footer">
                 </div>
             </div>
@@ -184,6 +207,16 @@
             </div>
             <div class="swiper-slide">
                 <div class="cwrapper cviewport">
+                    <img src="../img/26/p26_02.jpg" class="background">
+                    <img src="../img/logo2.png" class="logo" alt="">
+                    <img src="../img/26/p26_03.png" class="float hidden bigger" style="left:0.27rem;width:1.19rem;top:3.43rem;">
+                    <img src="../img/26/p26_05.png" class="float hidden bigger" style="left:2.76rem;width:0.91rem;top:3.43rem;">
+                    <img src="../img/26/p26_07.png" class="float hidden bigger" style="left:4.38rem;width:1.74rem;top:3.43rem;">
+                    <img src="../img/footer.png" alt="1" class="footer">
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="cwrapper cviewport">
                     <img src="../img/17/p17_02.jpg" class="background">
                     <img src="../img/logo2.png" class="logo" alt="">
                     <img src="../img/17/p17_03.png" class="float hidden animated  righter" style="left:1.05rem;width:5.35rem;top:3.67rem;">
@@ -192,9 +225,9 @@
             </div>
             <div class="swiper-slide">
                 <div class="cwrapper cviewport">
-                    <img src="../img/18/p18_02.jpg" class="background">
+                    <img src="../img/l/pl_02.jpg" class="background">
                     <img src="../img/logo2.png" class="logo" alt="">
-                    <img src="../img/18/p18_03.png" class="float hidden heart" style="left:2.51rem;width:1.37rem;top:4.71rem;">
+                    <img src="../img/l/pl_02.png" class="float hidden animated  upper" style="top:4.2rem;">
                     <img src="../img/footer.png" alt="1" class="footer">
                 </div>
             </div>
@@ -219,6 +252,7 @@
                     <img src="../img/20/p20_02.jpg" class="background">
                     <img src="../img/logo2.png" class="logo" alt="">
                     <img src="../img/20/p20_03.png" class="float hidden heart" style="left:2.51rem;width:1.37rem;top:4.71rem;">
+                    <img src="../img/20/pp20_02.png" class="float hidden animated  bounceInUp" style="top:3.14rem;">
                     <img src="../img/footer.png" alt="1" class="footer">
                 </div>
             </div>
@@ -226,7 +260,7 @@
                 <div class="cwrapper cviewport">
                     <img src="../img/21/p21_02.jpg" class="background">
                     <img src="../img/logo2.png" class="logo" alt="">
-                    <img src="../img/20/p20_03.png" class="float hidden heart" style="left:2.51rem;width:1.37rem;top:4.71rem;">
+                    <img src="../img/21/p21_03.png" class="float hidden heart" style="left:2.51rem;width:1.37rem;top:4.71rem;">
                     <img src="../img/footer.png" alt="1" class="footer">
                 </div>
             </div>
@@ -241,13 +275,8 @@
             <div class="swiper-slide">
                 <div class="cwrapper cviewport">
                     <img src="../img/23/p23_02.jpg" class="background">
-                    <img src="../img/logo2.png" class="logo" alt="">
-                    <img src="../img/footer.png" alt="1" class="footer">
-                </div>
-            </div>
-            <div class="swiper-slide">
-                <div class="cwrapper cviewport">
-                    <img src="../img/23/p23_02.jpg" class="background">
+                    <img src="../img/23/2.png" class="float" style="top:3.36rem;">
+                    <img src="../img/23/r.png" class="float hidden fadein" style="top:3.36rem;">
                     <img src="../img/logo2.png" class="logo" alt="">
                     <img src="../img/footer.png" alt="1" class="footer">
                 </div>
@@ -266,19 +295,9 @@
                     <img src="../img/logo2.png" class="logo" alt="">
                 </div>
             </div>
-            <div class="swiper-slide">
-                <div class="cwrapper cviewport">
-                    <img src="../img/26/p26_02.jpg" class="background">
-                    <img src="../img/logo2.png" class="logo" alt="">
-                    <img src="../img/26/p26_03.png" class="float hidden bigger" style="left:0.27rem;width:1.19rem;top:3.43rem;">
-                    <img src="../img/26/p26_05.png" class="float hidden bigger" style="left:2.76rem;width:0.91rem;top:3.43rem;">
-                    <img src="../img/26/p26_07.png" class="float hidden bigger" style="left:4.38rem;width:1.74rem;top:3.43rem;">
-                    <img src="../img/footer.png" alt="1" class="footer">
-                </div>
-            </div>
         </div>
         <!-- Add Pagination -->
-        <div class="swiper-pagination"></div>
+        <!--<div class="swiper-pagination"></div>-->
         <div class="arrow cviewport">
             <img src="../img/arrow.png">
         </div>
