一定要教育好业务方怎么做人

--- a/html/index.html
+++ b/html/index.html
@@ -16,6 +16,8 @@
     <!-- Demo styles -->
     <link rel="stylesheet" href="../css/common/animate.css">
     <link rel="stylesheet" href="../css/container.css">
+    <link rel="stylesheet" href="../css/custom.css">
+    <link rel="stylesheet" href="../css/little.css">
     <link rel="stylesheet" href="../css/float.css">
 </head>
 
@@ -23,6 +25,33 @@
     <!-- Swiper -->
     <div class="swiper-container">
         <div class="swiper-wrapper">
+
+            <div class="swiper-slide">
+                <div class="cwrapper cviewport">
+                    <img src="../img/20/p20_02.jpg" class="background">
+                    <img src="../img/logo2.png" class="logo" alt="">
+                    <img src="../img/20/label1.png" alt="1" class="float hidden animated lball2" style="top:3.19rem;left:5.04rem;width:1.05rem;">
+                    <img src="../img/20/label2.png" alt="1" class="float hidden animated lball4" style="top:3.36rem;left:0.97rem;width:0.98rem;">
+                    <img src="../img/20/label3.png" alt="1" class="float hidden animated lball6" style="top:3.94rem;left:0.84rem;width:1rem;">
+                    <img src="../img/20/label4.png" alt="1" class="float hidden animated lball8" style="top:3.78rem;left:2.13rem;width:1.01rem;">
+                    <img src="../img/20/label5.png" alt="1" class="float hidden animated lball22" style="top:4.03rem;left:3.53rem;width:1.51rem;">
+                    <img src="../img/20/label6.png" alt="1" class="float hidden animated lball24" style="top:4.60rem;left:0.59rem;width:1.54rem;">
+                    <img src="../img/20/label7.png" alt="1" class="float hidden animated lball2" style="top:4.76rem;left:5.03rem;width:0.98rem;">
+                    <img src="../img/20/label8.png" alt="1" class="float hidden animated lball" style="top:5.53rem;left:0.84rem;width:1.02rem;">
+                    <img src="../img/20/label9.png" alt="1" class="float hidden animated lball26" style="top:5.53rem;left:4.22rem;width:1.40rem;">
+                    <img src="../img/20/label10.png" alt="1" class="float hidden animated lball36" style="top:6.32rem;left:1.28rem;width:0.95rem;">
+                    <img src="../img/20/label11.png" alt="1" class="float hidden animated lball28" style="top:6.32rem;left:2.68rem;width:1.37rem;">
+                    <img src="../img/20/label12.png" alt="1" class="float hidden animated lball" style="top:6.36rem;left:5.12rem;width:0.99rem;">
+                    <img src="../img/20/label13.png" alt="1" class="float hidden animated lball4" style="top:6.9rem;left:0.48rem;width:1.01rem;">
+                    <img src="../img/20/label14.png" alt="1" class="float hidden animated lball38" style="top:7.18rem;left:2.02rem;width:1.01rem;">
+                    <img src="../img/20/label15.png" alt="1" class="float hidden animated lball" style="top:7.27rem;left:3.48rem;width:1.02rem;">
+                    <img src="../img/20/label16.png" alt="1" class="float hidden animated lball" style="top:7.82rem;left:0.73rem;width:1.02rem;">
+                    <img src="../img/20/label17.png" alt="1" class="float hidden animated lball8" style="top:7.89rem;left:3.84rem;width:0.98rem;">
+                    <img src="../img/20/label18.png" alt="1" class="float hidden animated lball32" style="top:7.72rem;left:5.31rem;width:0.96rem;">
+                    <img src="../img/20/label18.png" alt="1" class="float hidden animated lball6" style="top:6.83rem;left:4.56rem;width:0.99rem;">
+                    <img src="../img/footer.png" alt="1" class="footer">
+                </div>
+            </div>
             <div class="swiper-slide slide1 cactive">
                 <div class="cwrapper cviewport">
                     <img src="../img/1/1.jpg" class="background">
@@ -247,12 +276,10 @@
                     <img src="../img/footer.png" alt="1" class="footer">
                 </div>
             </div>
-            <div class="swiper-slide">
+            <div class="swiper-slide 20">
                 <div class="cwrapper cviewport">
                     <img src="../img/20/p20_02.jpg" class="background">
                     <img src="../img/logo2.png" class="logo" alt="">
-                    <img src="../img/20/p20_03.png" class="float hidden heart" style="left:2.51rem;width:1.37rem;top:4.71rem;">
-                    <img src="../img/20/pp20_02.png" class="float hidden animated  bounceInUp" style="top:3.14rem;">
                     <img src="../img/footer.png" alt="1" class="footer">
                 </div>
             </div>
